ws2: Add test_ws top level windows to the AuraTestHelper's root.

Re-enable several tests that were broken without this change:
  DesktopWindowTreeHostMusTest.Deactivate
  DesktopWindowTreeHostMusTest.StackAbove
  WidgetTestInteractive.ExitFullscreenRestoreState
  WidgetObserverTest.ActivationChange
(WindowTree::SetFocus would fail and revert without a root window)
(tests mayby passed flakily by not getting revert responses in time)

Add logging; remove unused WidgetObserverTest widget; cleanup.

Bug: 864614, 864615, 864618, 864800
Test: automated tests don't flake (passed 100+ runs for me)
Change-Id: Idf34e6b4cae9a268eb580ecdbadb023da711b102
Reviewed-on: https://chromium-review.googlesource.com/1149087
Commit-Queue: Michael Wasserman <msw@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578147}
Former-commit-id: 9c3b6f47c4e7f96ec9cb6525801f06ea989f6513