ui/views/mus/desktop_window_tree_host_mus_unittest.cc
@@ -157,8 +157,7 @@ TEST_F(DesktopWindowTreeHostMusTest, Capture) {
                          ->capture_window());
 }
 
-// TODO(http://crbug.com/864614): Fails flakily in mus with ws2.
-TEST_F(DesktopWindowTreeHostMusTest, DISABLED_Deactivate) {
+TEST_F(DesktopWindowTreeHostMusTest, Deactivate) {
   std::unique_ptr<Widget> widget1(CreateWidget());
   widget1->Show();
 
@@ -279,8 +278,7 @@ TEST_F(DesktopWindowTreeHostMusTest, StackAtTopAlreadyOnTop) {
   waiter.Wait();
 }
 
-// TODO(http://crbug.com/864615): Fails consistently in mus with ws2.
-TEST_F(DesktopWindowTreeHostMusTest, DISABLED_StackAbove) {
+TEST_F(DesktopWindowTreeHostMusTest, StackAbove) {
   std::unique_ptr<Widget> widget1(CreateWidget(nullptr));
   widget1->Show();
 
